--- a/src/components/explore/ExploreSection.scss
+++ b/src/components/explore/ExploreSection.scss
@@ -56,6 +56,7 @@
     padding-top: var(--space-2);
     margin-top: calc(-1 * var(--space-2));
     padding-bottom: var(--space-2);
+    margin-right: -$padding-horizontal;
 
     &::-webkit-scrollbar { display: none; }
 
